# transition-element-framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: azure-static-web-apps-gentle-bay-0e0a82503.yml
markdown/: index.md  introduction.md  partnership.md
markdown/2-ipcc-mitigation-options/: index.md
markdown/3-transition-elements/: index.md
markdown/4-whitepapers/: index.md  whitepaper-data-driven-transitions.md  whitepaper-standardising-climate-mitigation.md
markdown/5-resources/: index.md  references.bib
markdown/6-examples/: index.md
models/parameters/: additional_electric_cargo_bikes_per_light_truck.yaml  agriculture_forestry_fishing_other_electric_appliances_savings_factor.yaml  annual_commercial_electric_stove_energy_consumption.yaml  annual_commercial_gas_stove_energy_consumption.yaml  annual_lighting_hours_per_commercial_light_source.yaml  annual_lighting_hours_per_light_source.yaml  annual_residential_electric_stove_energy_consumption.yaml  annual_residential_gas_stove_energy_consumption.yaml  average_area_heated_coal_boiler_multi_family_buildings.yaml  average_area_heated_coal_boiler_single_family_buildings.yaml  average_area_heated_district_heat_exchanger_commercial_buildings.yaml  average_area_heated_district_heat_exchanger_multi_family_buildings.yaml  average_area_heated_district_heat_exchanger_public_buildings.yaml  average_area_heated_district_heat_exchanger_single_family_buildings.yaml  (+2322 more)
notebooks/: README.md  activity_model_explorer.py
src/: hooks.py  mkdocs.yml  pytest.ini  requirements.txt  staticwebapp.config.json
(+4658 files in other folders)
